# xmate_robot

./: README.md
aruco_ros/aruco_ros/launch/: single.launch
service_example/: CMakeLists.txt  README.txt  package.xml
service_example/launch/: auto_test_demo.launch  start.launch  test.launch  voice_nav.launch  voice_robot.launch
service_example/scripts/: agv_start.py  demo.py  test.py
usb_cam/include/: task_demo.cpp  task_demo.h
usb_cam/launch/: ar_track_alvar_test.launch
usb_cam/src/: ar_roation.cpp  demo.cpp  get_ar_pose.cpp  grap_demo.cpp  tf.cpp
xmate_robot/: CMakeLists.txt  package.xml
xmate_robot/inc/rci_data/: command_traits.h  command_types.h  error.h
xmate_robot/include/: RobotStateInfo.h  Thread.h  cart_motion.h  clients.h  errors.h  lowpass_filter.h  motion_generator_traits.h  network.h  platform.h
xmate_robot/launch/: grasp_test_demo.launch  place_grasp_demo.launch  place_test_demo.launch  product_place_demo.launch  product_place_test_demo.launch  product_test_demo.launch
xmate_robot/src/: grasp_test_demo.cpp  place_grasp_demo.cpp  place_grasp_demo_test.cpp  place_test_demo.cpp  product_place_test_demo.cpp  product_test.cpp  product_test_demo.cpp  test.cpp
xmate_robot_2/: CMakeLists.txt  package.xml  readme.md  xmate.ini  xmate.txt  修改.md
xmate_robot_2(xmate3)/: package.xml  readme.md  xmate.ini
xmate_robot_2(xmate3)/inc/include/: hg_ai_robot.h  model.h  robot.h
xmate_robot_2(xmate3)/inc/rci_data/: robot_datas.h
xmate_robot_2(xmate3)/include/: follow_pose.h  hg_ai_robot.h
xmate_robot_2(xmate3)/launch/: bjj_place_demo.launch  new_place_demo.launch  new_product_grasp_demo.launch  no_ar_data.launch  place_grasp_demo.launch  place_grasp_demo_new.launch  product_ar_test.launch
xmate_robot_2(xmate3)/src/: bjj_grasp_demo.cpp  get_robot_moment.cpp  hg_ai_robot.cpp  test_demo.cpp
xmate_robot_2/inc/include/: control_tools.h  control_types.h  duration.h  event.h  hg_ai_robot.h  joint_motion.h  json_help.h  model.h  move.h  print_rci.h  proxy.h  rate_limiting.h  robot.h  velocity_control.h  xmate_exception.h
xmate_robot_2/inc/rci_data/: robot_datas.h
xmate_robot_2/launch/: bjj_grasp.launch  bjj_place_demo.launch  grasp_test_demo.launch  new_place_demo.launch  new_product_grasp_demo.launch  no_ar_data.launch  place_grasp_demo.launch  place_grasp_demo_new.launch  product_ar_test.launch  product_place_demo.launch  test_demo.launch
xmate_robot_2/src/: bjj_grasp_demo.cpp  hg_ai_robot.cpp  new_grasp_demo.cpp  new_place_demo.cpp  new_product_grasp_demo.cpp  new_product_place_demo.cpp  no_ar_data_test.cpp  place_bjj_demo.cpp  place_grasp_demo.cpp  place_grasp_demo_new.cpp  product_ar_test.cpp  test_demo.cpp  voice_grasp_place.cpp
